@startuml

title __SEND's Class Diagram__\n

  namespace com.example.edelhome {
    namespace ui.send {
      class com.example.edelhome.ui.send.SendFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.example.edelhome {
    namespace ui.send {
      class com.example.edelhome.ui.send.SendViewModel {
          - mText : MutableLiveData<String>
          + SendViewModel()
          + getText()
      }
    }
  }
  

  com.example.edelhome.ui.send.SendFragment -up-|> androidx.fragment.app.Fragment
  com.example.edelhome.ui.send.SendFragment o-- com.example.edelhome.ui.send.SendViewModel : sendViewModel
  com.example.edelhome.ui.send.SendViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
